# moodle-log-smart

./: .env.development  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROJECT-STATUS.md  README.md  aios.config.js  docker-compose.prod.yml  docker-compose.yml  railway.json  railway.toml  vercel.json
.aios-core/: README.md
.claude/: settings.local.json
.github/workflows/: deploy-backend-railway.yml  deploy-frontend-vercel.yml
backend/: .dockerignore  .env.example  API.md  Dockerfile  Dockerfile.railway  PORTUGUESE-SUPPORT.md  pyproject.toml  pytest.ini
backend/src/moodlelogsmart/: __init__.py  main.py
backend/src/moodlelogsmart/api/: __init__.py  auth.py  job_manager.py  models.py  validators.py
backend/src/moodlelogsmart/core/auto_detect/: __init__.py  column_mapper.py  csv_detector.py  timestamp_detector.py
backend/src/moodlelogsmart/core/clean/: data_cleaner.py
backend/src/moodlelogsmart/core/export/: exporter.py
backend/src/moodlelogsmart/core/rules/: __init__.py  bloom_classifier.py  bloom_taxonomy.yaml  rule_engine.py
backend/src/moodlelogsmart/domain/: __init__.py  models.py
backend/tests/: conftest.py  test_api.py  test_epic01_integration.py  test_portuguese_columns.py  test_timestamp_detector_fix.py
docs/: API.md  ARCHITECTURE.md  INDEX.md  PRD-MoodleLogSmart.md
docs/architecture/: ARCHITECTURE-DIAGRAMS.md
docs/deployment/: DEPLOYMENT-GUIDE.md  DOCKER-BUILD-GUIDE.md  ENVIRONMENT-VARIABLES.md  MONITORING.md  OPERATIONS-GUIDE.md  PRODUCTION-CHECKLIST.md  README.md  SECURITY.md  TROUBLESHOOTING.md
docs/epics/: EPIC-01-Backend-Core-AutoDetection.md  EPIC-02-API-Layer.md  EPIC-03-Frontend-Minimalista.md  EPIC-04-Docker-Deployment.md  README.md
docs/qa/: README.md
docs/stories/: README.md  STORY-1.1-Auto-Detection-CSV-Format.md  STORY-1.2-Auto-Mapping-Moodle-Columns.md  STORY-1.3-Auto-Detection-Timestamp-Format.md  STORY-1.4-to-1.7-Remaining-Epic01.md  STORY-2.3-Download-Endpoint.md  STORY-2.4-Job-Management.md  STORY-2.5-Authentication-Authorization.md  STORY-2.6-File-Cleanup-Job-Timeout.md  STORY-2.7-Security-Hardening.md  STORY-3.1-UploadZone-Component.md  STORY-3.2-ProgressBar-Component.md  STORY-3.3-DownloadButton-Component.md  (+5 more)
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: generate-secrets.sh  test-docker-builds.sh  test-e2e.sh
(+20 files in other folders)
