[tool.poetry]
name = "moodlelogsmart-backend"
version = "0.1.0"
description = "Transform Moodle logs into semantic learning analytics using Bloom's Taxonomy"
authors = ["Elton Vertumno <vertumno@users.noreply.github.com>"]
license = "MIT"
readme = "../README.md"
packages = [{include = "moodlelogsmart", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
pandas = "^2.1.0"
openpyxl = "^3.1.0"
chardet = "^5.2.0"
rapidfuzz = "^3.4.0"
pm4py = "^2.7.0"
pyyaml = "^6.0.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
ruff = "^0.11.0"
mypy = "^1.6.0"
httpx = "^0.25.0"

[tool.poetry.scripts]
moodlelogsmart = "moodlelogsmart.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pm4py.*",
    "chardet.*",
    "rapidfuzz.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/moodlelogsmart --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
